# kdbx4

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
.cargo/: config
ci/: script.sh
src/: constants.rs  database.rs  error.rs  kdbx.rs  keys.rs  lib.rs
src/database/: binaries.rs  entry.rs  xml.rs
src/encryption/: cipher.rs  mod.rs  stream_cipher.rs
src/encryption/kdf/: aes.rs  argon2.rs  mod.rs
tests/: aes_aes_gzip_pwd.kdbx  aes_argon2id_gzip_pwd.kdbx  aes_argon_gzip_pwd.kdbx  chacha_argon2d_keyfile.kdbx  chacha_argon2id_gzip_pwd_keyfile.kdbx  chacha_argon_gzip_pwd.kdbx  open_and_read.rs
