[package]
name = "kdbx4"
description = "KeePass KDBX4 file reader\n"
version = "0.4.1"
edition = "2018"

authors = ["paul <paul@makovi.ch>"]
license = "MIT OR Unlicense"
readme = "README.md"

documentation = "https://docs.rs/kdbx4/"
homepage = "https://github.com/makovich/kdbx4"
repository = "https://github.com/makovich/kdbx4"
keywords = ["keepass", "kdbx4", "kdbx", "password"]

include = [
    "**/*.rs",
    "tests/*",
    "Cargo.toml",
    "README.md",
]

[lib]
name = "kdbx4"

[dependencies]
aes = "0.3.2"
base64 = "0.11"
block-modes = "0.3"
byteorder = "1"
chacha20 = "0.2"
env_logger = "0.7"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
hmac = "0.7"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
pretty-hex = "0.1.0"
rust-argon2 = "0.2.0"
salsa20 = "0.3"
sha2 = "0.8"
stream-cipher = "0.3"
xmlparser = "0.6.0"
