[package]
name = "kdbx4"
description = "KeePass KDBX4 file reader\n"
version = "0.4.2"
edition = "2018"

authors = ["paul <paul@makovi.ch>"]
license = "MIT OR Unlicense"
readme = "README.md"

documentation = "https://docs.rs/kdbx4/"
homepage = "https://github.com/makovich/kdbx4"
repository = "https://github.com/makovich/kdbx4"
keywords = ["keepass", "kdbx4", "kdbx", "password"]

include = [
    "**/*.rs",
    "tests/*",
    "Cargo.toml",
    "README.md",
]

[lib]
name = "kdbx4"

[dependencies]
aes = "0.7"
base64 = "0.13"
block-modes = "0.8"
byteorder = "1"
chacha20 = "0.8"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
hmac = "0.11"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
pretty-hex = "0.2.0"
rust-argon2 = "0.8"
salsa20 = "0.9"
sha2 = "0.9"
cipher = "0.3"
xmlparser = "0.6.0"

[dev-dependencies]
env_logger = "0.9"
